--- a/style.css
+++ b/style.css
@@ -1,10 +1,3 @@
-body{
-    padding: 30px;
-}
-#section-1{
-    border: 2px solid black;
-    padding: 30px;
-}
-a{
-    color: black;
+*{
+    background-color: blue;
 }
